<resources>
    <string name="app_name">My Animelist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_details">Details</string>

    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_animes">Animes</string>
    <string name="title_series">Series</string>

    <string name="status_running">Running</string>
    <string name="status_waiting">Waiting</string>
    <string name="status_tosee">To See</string>
    <string name="status_finished">Finished</string>
    <string name="commentary">Commentary</string>
    <string name="episode">Episode</string>
    <string name="season">Season</string>
    <string name="picture">Picture</string>
    <string name="link">Link</string>
    <string name="inc_season">Inc Season</string>
    <string name="inc_episode">Inc Episode</string>
    <string name="name">Name</string>
    <string name="remember_me">Remember me</string>
    <string name="register_online">Register Online</string>

    <string-array name="status_entries">
        <item>@string/status_running</item>
        <item>@string/status_waiting</item>
        <item>@string/status_tosee</item>
        <item>@string/status_finished</item>
    </string-array>

</resources>
